fix(combobox): update spec (#2355)

--- a/packages/design-system/ui/components/combobox/_doc.scss
+++ b/packages/design-system/ui/components/combobox/_doc.scss
@@ -7,7 +7,7 @@
  * @base
  * @name combobox
  * @selector .slds-combobox_container
- * @support dev-ready
+ * @support prototype
  * @category experience
  * @type user-input
  * @layout adaptive
