--- a/packages/design-system/ui/components/combobox/multi-entity/_index.scss
+++ b/packages/design-system/ui/components/combobox/multi-entity/_index.scss
@@ -4,7 +4,7 @@
 /**
  * @summary Container that manages layout when a listbox of pill options sit next to a combobox search input
  *
- * @name polymorphic
+ * @name multi-entity
  * @selector .slds-has-object-switcher
  * @restrict .slds-combobox_container
  * @variant
