chore(visibility): fix bad annotation (#2364)

--- a/packages/design-system/ui/utilities/visibility/_doc.scss
+++ b/packages/design-system/ui/utilities/visibility/_doc.scss
@@ -7,6 +7,6 @@
  * @utility
  * @name visibility
  * @selector [class*='show'], [class*='hide'], [class*='assistive-text']
- * support dev-ready
+ * @support dev-ready
  * @layout responsive
  */
