feat(slider): add slider component (#2449)
* feat(slider): add slider component

* Add tokens and clean up documentation

* Documentation updates

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -54,6 +54,7 @@
   'form-layout/base/index',
   'form-layout/compound/index',
   'docked-form-footer/base/index',
+  'slider/base/index',
 
   // File selector
   'file-selector/base/index',
