feat(dynamic-icons): add global help icon (#2734)
* Starter filse for dynamic icons global action plus

* feat(dynamic icon global plus) add mask hover

* feat(global action icon) finished plus icon

* changes

* feat(global-action dynamic icons) help button hover and active state animations

* feat(dynamic-icons): add tokens and help icon

* feat(dynamic-icons): add help icon

* saving all my changes

* Removed other icons

* feat(dynamic-icons) global help icon syntax fixes

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -41,6 +41,8 @@
   'dynamic-icons/strength/index',
   'dynamic-icons/trend/index',
   'dynamic-icons/waffle/index',
+  'dynamic-icons/global-action-help/index',
+
 
   // Card
   'cards/base/index',
