--- a/packages/design-system/ui/components/dynamic-icons/_doc.scss
+++ b/packages/design-system/ui/components/dynamic-icons/_doc.scss
@@ -6,7 +6,7 @@
  *
  * @base
  * @name dynamic-icons
- * @selector .slds-icon-ellie, .slds-icon-score, .slds-icon-eq, .slds-icon-strength, .slds-icon-trend, .slds-icon-waffle_container
+ * @selector .slds-icon-ellie, .slds-icon-score, .slds-icon-eq, .slds-icon-strength, .slds-icon-trend, .slds-icon-waffle_container, .slds-icon-help
  * @category experience
  * @type messaging
  * @support dev-ready
