feat(map): Add map component (#2794)
* feat(map): Add map component with tests

* chore(map): remove enzyme dependency

* chore(map): Update snapshots

* chore(map): delete snapshots

* chore(map): Update snapshots

* chore(map): delete snapshots

* chore(map): add snapshots back

* chore(map): one more time, update snapshots

* change test to verbose

* And again

* nope

* chore(map): add back tests

* chore(axe) don't axe the google maps iframe

* chore(map): update HTML to resolve vnu errors

* chore(map): Add selected styles on coordinates list

* chore(map): Add title to maps iframe

--- a/packages/design-system/ui/components/modals/base/_index.scss
+++ b/packages/design-system/ui/components/modals/base/_index.scss
@@ -245,6 +245,25 @@
 /**
  * Widens the modal to take more horizontal space
  *
+ * @selector .slds-modal_medium
+ * @restrict .slds-modal
+ * @modifier
+ * @group size
+ */
+.slds-modal_medium {
+
+  .slds-modal__container {
+    @include mq-medium-min {
+      width: 90%;
+      max-width: 75rem;
+      min-width: 40rem; // TODO: Tokenize
+    }
+  }
+}
+
+/**
+ * Widens the modal to take more horizontal space
+ *
  * @selector .slds-modal_large
  * @restrict .slds-modal
  * @modifier
@@ -252,8 +271,6 @@
  */
 .slds-modal_large .slds-modal__container,
 .slds-modal--large .slds-modal__container {
-
-  // TODO: We'll want to readdress this to do the .99 thing
   @include mq-medium-min {
     width: 90%;
     max-width: none;
