feat(icons): Added a utility class to set icon color to current color (#2840)
* feat(icons): Added a utility class for current color

* feat(icons): Updated annotation selector

--- a/packages/design-system/ui/components/icons/base/_index.scss
+++ b/packages/design-system/ui/components/icons/base/_index.scss
@@ -177,3 +177,14 @@ $bg-standard-map: map-merge($task2-monkey-patch, $bg-standard-map);
 .slds-icon-text-light {
   fill: $color-text-input-icon;
 }
+
+/**
+ * @selector .slds-current-color
+ * @restrict *
+ */
+.slds-current-color {
+
+  .slds-icon {
+    fill: currentColor;
+  }
+}
