fix(picklist): Updated CSS to show picklist disabled style (#2839)

--- a/packages/design-system/ui/components/combobox/base/_index.scss
+++ b/packages/design-system/ui/components/combobox/base/_index.scss
@@ -59,6 +59,11 @@
   &:focus {
     border-color: $color-border-brand-primary;
   }
+
+  &[disabled] {
+    background-color: $color-background-input-disabled;
+    border-color: $color-border-input-disabled;
+  }
 }
 
 /**
