--- a/packages/design-system/ui/components/rich-text-editor/_doc.scss
+++ b/packages/design-system/ui/components/rich-text-editor/_doc.scss
@@ -8,6 +8,11 @@
  * The “clear formatting” button always stays at the end of the buttons set,
  * regardless of which rich text editor variant is used. It should always stand by itself.
  *
+ * On smaller screen sizes, the select dropdowns for Font and Size in the toolbar can overlap
+ * outside of the container. To adjust the widths of the dropdowns, apply the class
+ * `slds-region_narrow` to the outermost `div` of the rich text editor.
+ *
+ *
  * #### Accessibility
  *
  * Ensure that there is a single tab key stop for the button groups in the
