--- a/packages/design-system/ui/components/rich-text-editor/base/_index.scss
+++ b/packages/design-system/ui/components/rich-text-editor/base/_index.scss
@@ -66,6 +66,18 @@
   margin-right: $spacing-xx-small;
 }
 
+// This class should be placed on a containing div when RTE toolbar is in a small space
+.slds-region_narrow {
+
+  .slds-combobox {
+    max-width: 11rem;
+  }
+
+  .slds-rich-text-editor__spacing-wrapper {
+    margin-bottom: $spacing-xx-small;
+  }
+}
+
 /**
  * Focus state for rich text editor
  *
