feat(rich-text-editor): Add additional quill styles to RTE and fix placeholder selector (#2835)
* feat(rich-text-editor): Update css for existing quill styling

feat(rich-text-editor): Added quill list styles

feat(rich-text-editor): fix failing travis

feat(rich-text-editor): fix travis issue

feat(rich-text-editor): fix travis issue

feat(rich-text-editor): fixed all linting failures

* feat(rich-text-editor): Updated quill styles

--- a/packages/design-system/ui/components/rich-text-editor/base/_index.scss
+++ b/packages/design-system/ui/components/rich-text-editor/base/_index.scss
@@ -136,7 +136,7 @@
     word-wrap: break-word;
     user-select: text;
 
-    .ql-blank:before {
+    &.ql-blank:before {
       color: #54698d;
       content: attr(data-placeholder);
       pointer-events: none;
@@ -301,5 +301,376 @@
 
   .serif {
     font-family: serif;
+  }
+
+  p,
+  ol,
+  ul,
+  pre,
+  blockquote,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+  }
+
+  ol,
+  ul {
+    margin: 0;
+    padding: 0;
+    padding-left: 1.5em;
+  }
+
+  ol > li {
+    list-style-type: none;
+  }
+
+  ul {
+
+    > li {
+      list-style-type: none;
+
+      &:before {
+        content: '\2022';
+        font-size: 1.4em;
+        vertical-align: middle;
+        display: inline-block;
+        line-height: normal;
+      }
+    }
+
+
+    &[data-checked="true"],
+    &[data-checked="false"] {
+      pointer-events: none;
+    }
+
+    &[data-checked="true"] {
+
+      > li {
+
+        &:before {
+          color: #777;
+          cursor: pointer;
+          pointer-events: all;
+        }
+      }
+    }
+
+    &[data-checked="false"] {
+
+      > li {
+
+        &:before {
+          color: #777;
+          cursor: pointer;
+          pointer-events: all;
+        }
+      }
+    }
+
+    &[data-checked="true"] {
+
+      > li {
+
+        &:before {
+          content: '\2611';
+        }
+      }
+    }
+
+
+    &[data-checked="false"] {
+
+      > li {
+
+        &:before {
+          content: '\2610';
+        }
+      }
+    }
+  }
+
+
+  li {
+
+    &:before {
+      display: inline-block;
+      margin-right: 0.3em;
+      text-align: right;
+      white-space: nowrap;
+      width: 1.2em;
+    }
+
+    &:not(.ql-direction-rtl) {
+
+      &:before {
+        margin-left: -1.5em;
+      }
+    }
+  }
+
+  ol li,
+  ul li {
+    padding-left: 1.5em;
+  }
+
+  ol li {
+    counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+    counter-increment: list-num;
+
+    &:before {
+      content: counter(list-num, decimal) ". ";
+    }
+
+    &.ql-indent-1 {
+      counter-increment: list-1;
+
+      &:before {
+        content: counter(list-1, lower-alpha) ". ";
+      }
+      counter-reset: list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+    }
+
+    &.ql-indent-2 {
+      counter-increment: list-2;
+
+      &:before {
+        content: counter(list-2, lower-roman) ". ";
+      }
+      counter-reset: list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+    }
+
+    &.ql-indent-3 {
+      counter-increment: list-3;
+
+      &:before {
+        content: counter(list-3, decimal) ". ";
+      }
+      counter-reset: list-4 list-5 list-6 list-7 list-8 list-9;
+    }
+
+    &.ql-indent-4 {
+      counter-increment: list-4;
+
+      &:before {
+        content: counter(list-4, lower-alpha) ". ";
+      }
+      counter-reset: list-5 list-6 list-7 list-8 list-9;
+    }
+
+    &.ql-indent-5 {
+      counter-increment: list-5;
+
+      &:before {
+        content: counter(list-5, lower-roman) ". ";
+      }
+      counter-reset: list-6 list-7 list-8 list-9;
+    }
+
+    &.ql-indent-6 {
+      counter-increment: list-6;
+
+      &:before {
+        content: counter(list-6, decimal) ". ";
+      }
+      counter-reset: list-7 list-8 list-9;
+    }
+
+    &.ql-indent-7 {
+      counter-increment: list-7;
+
+      &:before {
+        content: counter(list-7, lower-alpha) ". ";
+      }
+      counter-reset: list-8 list-9;
+    }
+
+    &.ql-indent-8 {
+      counter-increment: list-8;
+
+      &:before {
+        content: counter(list-8, lower-roman) ". ";
+      }
+      counter-reset: list-9;
+    }
+
+    &.ql-indent-9 {
+      counter-increment: list-9;
+
+      &:before {
+        content: counter(list-9, decimal) ". ";
+      }
+    }
+  }
+
+  ul li {
+
+    &.ql-indent-1 {
+
+      &:before {
+        content: '\25e6';
+      }
+    }
+
+    &.ql-indent-2,
+    &.ql-indent-3,
+    &.ql-indent-4,
+    &.ql-indent-5,
+    &.ql-indent-6,
+    &.ql-indent-7,
+    &.ql-indent-8 {
+
+      &:before {
+        content: '\25aa';
+      }
+    }
+  }
+
+  .ql-indent-1:not(.ql-direction-rtl) {
+    padding-left: 3em;
+  }
+
+  li.ql-indent-1:not(.ql-direction-rtl) {
+    padding-left: 4.5em;
+  }
+
+  .ql-indent-1.ql-direction-rtl.ql-align-right {
+    padding-right: 3em;
+  }
+
+  li.ql-indent-1.ql-direction-rtl.ql-align-right {
+    padding-right: 4.5em;
+  }
+
+  .ql-indent-2:not(.ql-direction-rtl) {
+    padding-left: 6em;
+  }
+
+  li.ql-indent-2:not(.ql-direction-rtl) {
+    padding-left: 7.5em;
+  }
+
+  .ql-indent-2.ql-direction-rtl.ql-align-right {
+    padding-right: 6em;
+  }
+
+  li.ql-indent-2.ql-direction-rtl.ql-align-right {
+    padding-right: 7.5em;
+  }
+
+  .ql-indent-3:not(.ql-direction-rtl) {
+    padding-left: 9em;
+  }
+
+  li.ql-indent-3:not(.ql-direction-rtl) {
+    padding-left: 10.5em;
+  }
+
+  .ql-indent-3.ql-direction-rtl.ql-align-right {
+    padding-right: 9em;
+  }
+
+  li.ql-indent-3.ql-direction-rtl.ql-align-right {
+    padding-right: 10.5em;
+  }
+
+  .ql-indent-4:not(.ql-direction-rtl) {
+    padding-left: 12em;
+  }
+
+  li.ql-indent-4:not(.ql-direction-rtl) {
+    padding-left: 13.5em;
+  }
+
+  .ql-indent-4.ql-direction-rtl.ql-align-right {
+    padding-right: 12em;
+  }
+
+  li.ql-indent-4.ql-direction-rtl.ql-align-right {
+    padding-right: 13.5em;
+  }
+
+  .ql-indent-5:not(.ql-direction-rtl) {
+    padding-left: 15em;
+  }
+
+  li.ql-indent-5:not(.ql-direction-rtl) {
+    padding-left: 16.5em;
+  }
+
+  .ql-indent-5.ql-direction-rtl.ql-align-right {
+    padding-right: 15em;
+  }
+
+  li.ql-indent-5.ql-direction-rtl.ql-align-right {
+    padding-right: 16.5em;
+  }
+
+  .ql-indent-6:not(.ql-direction-rtl) {
+    padding-left: 18em;
+  }
+
+  li.ql-indent-6:not(.ql-direction-rtl) {
+    padding-left: 19.5em;
+  }
+
+  .ql-indent-6.ql-direction-rtl.ql-align-right {
+    padding-right: 18em;
+  }
+
+  li.ql-indent-6.ql-direction-rtl.ql-align-right {
+    padding-right: 19.5em;
+  }
+
+  .ql-indent-7:not(.ql-direction-rtl) {
+    padding-left: 21em;
+  }
+
+  li.ql-indent-7:not(.ql-direction-rtl) {
+    padding-left: 22.5em;
+  }
+
+  .ql-indent-7.ql-direction-rtl.ql-align-right {
+    padding-right: 21em;
+  }
+
+  li.ql-indent-7.ql-direction-rtl.ql-align-right {
+    padding-right: 22.5em;
+  }
+
+  .ql-indent-8:not(.ql-direction-rtl) {
+    padding-left: 24em;
+  }
+
+  li.ql-indent-8:not(.ql-direction-rtl) {
+    padding-left: 25.5em;
+  }
+
+  .ql-indent-8.ql-direction-rtl.ql-align-right {
+    padding-right: 24em;
+  }
+
+  li.ql-indent-8.ql-direction-rtl.ql-align-right {
+    padding-right: 25.5em;
+  }
+
+  .ql-indent-9:not(.ql-direction-rtl) {
+    padding-left: 27em;
+  }
+
+  li.ql-indent-9:not(.ql-direction-rtl) {
+    padding-left: 28.5em;
+  }
+
+  .ql-indent-9.ql-direction-rtl.ql-align-right {
+    padding-right: 27em;
+  }
+
+  li.ql-indent-9.ql-direction-rtl.ql-align-right {
+    padding-right: 28.5em;
   }
 }
